<resources>
    <string name="app_name">Fun Service</string>
    <string name="home">Home</string>
    <string name="notification">Notification</string>
    <string name="chatbot">Chatbot</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="book_service">Book Service</string>
    <string name="emergency_call">Emergency Call</string>
    <string name="service_tutorial">Service Tutorial</string>
    <string name="service_info">Service Info</string>
    <string name="pay_service">Pay Service</string>
    <string name="slider_image">Slider Image</string>
    <string name="default_ads_sentences">Kemudahan Servis Kendaraan Ada dalam Smartphone Anda</string>
    <string name="phone_number">phone number</string>
    <string name="name">name</string>
    <string name="call">call</string>
    <string name="daftar">Daftar</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="email">Email</string>
    <string name="alamat">Alamat</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="kata_sandi">Kata Sandi</string>
    <string name="ulangi_kata_sandi">Ulangi Kata Sandi</string>
    <string name="sudah_punya_akun">Sudah Punya Akun? Login Disini</string>
    <string name="logo">Logo</string>
    <string name="alamat_email">Alamat Email</string>
    <string name="login">Login</string>
    <string name="lupa_kata_sandi">Lupa Kata Sandi?</string>
    <string name="belum_punya_akun">Belum Punya Akun? Daftar Disini</string>
    <string name="akun_anda">Akun Anda</string>
    <string name="saldo_anda">Saldo Anda</string>
    <string name="rp_0">Rp 0</string>
    <string name="tambah">Tambah</string>
    <string name="riwayat">Riwayat</string>
    <string name="user_name">User Name</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="location">Location</string>
    <string name="lokasi">Lokasi</string>
    <string name="logout">Logout</string>
    <string name="pilih_tanggal">Pilih Tanggal</string>
    <string name="pilih_waktu">Pilih Waktu</string>
    <string name="pilih_jadwal_service_anda">Pilih Jadwal Service Anda</string>
    <string name="provinsi">Provinsi</string>
    <string name="tempat_service">Tempat Service</string>
    <string name="kota_kabupaten">Kota/Kabupaten</string>
    <string name="nama_sampah">Nama Sampah</string>
    <string name="layanan_tambahan">Layanan Tambahan</string>
    <string name="keluhan">Keterangan/Keluhan</string>
    <string name="book">Jadwalkan</string>
    <string name="tuliskan_keluhan_anda_disini">Tuliskan keluhan Anda disini</string>
    <string name="default_date">12/10/2019</string>
    <string name="default_time">11:00</string>
    <string name="total_pembayaran">Total Pembayaran (Rp)</string>
    <string name="default_pay">540000</string>
    <string name="officer_name">Officer Name</string>
    <string name="petugas">Petugas</string>
    <string name="estimasi_pengerjaan">Estimasi Pengerjaan</string>
    <string name="menunggu_persetujuan">Menunggu Persetujuan</string>
    <string name="total_bayar">Total Bayar</string>
    <string name="setujui">Setujui</string>
    <string name="hubungi_petugas">Hubungi Petugas</string>
    <string name="what_s_on_your_mind">Enter your query</string>
    <string-array name="province_array">
        <item>Pilih Provinsi</item>
        <item>Jakarta</item>
        <item>Banten</item>
        <item>Jawa Barat</item>
        <item>Jawa Timur</item>
        <item>Jawa Tengah</item>
    </string-array>
    <string-array name="city_array">
        <item>Pilih Kota/Kabupaten</item>
        <item>Malang</item>
        <item>Surabaya</item>
        <item>Kediri</item>
        <item>Mojokerto</item>
        <item>Blitar</item>
    </string-array>
    <string-array name="location_array">
        <item>Pilih Tempat Sevice</item>
        <item>Toyota Sukun Jaya</item>
        <item>Toyota Sumbersari</item>
        <item>Auto2000 Gadang</item>
        <item>Auto2000 Lowokwaru</item>
    </string-array>
</resources>
