<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView

        android:id="@+id/cv_item_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardElevation="4dp"
        app:cardCornerRadius="5dp"
        android:clickable="true"
        tools:ignore="KeyboardInaccessibleWidget">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="false"
                android:padding="5dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="8.5"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:padding="1dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="6"
                            android:gravity="center|start"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="15dp"
                                android:layout_height="15dp"
                                android:layout_margin="5dp"
                                android:src="@drawable/ic_date_grey_24dp" />

                            <TextView
                                android:id="@+id/tv_date"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/default_date"
                                android:textSize="12sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="5"
                            android:gravity="center|start"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="15dp"
                                android:layout_height="15dp"
                                android:layout_margin="5dp"
                                android:contentDescription="@string/default_time"
                                android:src="@drawable/ic_time_grey_24dp" />

                            <TextView
                                android:id="@+id/tv_time"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/default_time"
                                android:textSize="12sp" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|left"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="10dp"
                    android:textSize="15dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    android:text="@string/total_pembayaran"/>

                <TextView
                    android:id="@+id/tv_pay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_pay"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|start"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:contentDescription="@string/slider_image"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/ic_person_grey_24dp" />

                <TextView
                    android:id="@+id/tv_officer_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/officer_name"
                    android:textColor="@color/colorBlack"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>